--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ class PoolTable:
 
   <script>
     function enterSite() {
-      window.location.href = "main.html";
+      window.location.href = "https://github.com/BrokenCompSci/WEBSITE/blob/main/Main.html";
     }
 
     function enterSite() {
