--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ class PoolTable:
 
   <script>
     function enterSite() {
-      window.location.href = "https://brokencompsci.github.io/WEBSITE/main.html";
+      window.location.href = "https://brokencompsci.github.io/WEBSITE/Main.html";
     }
 
     function enterSite() {
