--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ class PoolTable:
     rose.classList.add('spin-on-click');
     // Wait for the spin to finish before redirecting
     setTimeout(() => {
-      window.location.href = "https://brokencompsci.github.io/WEBSITE/Main.html";
+      window.location.href = "Main.html";
     }, 1000); // match the duration of the spin (1s)
   }
   </script>
