--- a/Pool.html
+++ b/Pool.html
@@ -459,7 +459,7 @@ body {
 
 
     function enterSite() {
-      window.location.href = "main.html";
+      window.location.href = "Main.html";
     }
 
    
