--- a/Code.html
+++ b/Code.html
@@ -391,7 +391,7 @@
 
   <script>
     function enterSite() {
-      window.location.href = "main.html";
+      window.location.href = "Main.html";
     }
   </script>
 
