--- a/Writing.html
+++ b/Writing.html
@@ -239,7 +239,7 @@
 
   <script>
     function enterSite() {
-      window.location.href = "main.html";
+      window.location.href = "Main.html";
     }
   </script>
 
