--- a/Me.html
+++ b/Me.html
@@ -335,7 +335,7 @@ a:hover {
 
 
     function enterSite() {
-      window.location.href = "main.html";
+      window.location.href = "Main.html";
     }
 
    
