--- a/Main.html
+++ b/Main.html
@@ -230,7 +230,7 @@ body {
   <h2 style="margin-top: 20px; margin-bottom: 10px; font-family: 'Courier New', Courier, monospace;">Taylor Leyland</h2>
   <p style="font-size: 1rem; line-height: 1.4; font-family: 'Courier New', Courier, monospace;">Cue sports player, developer, and writer. I blend precision, logic, and creativity</p>
   
-  <a href="YourResume.pdf" download style="display: inline-block; margin-top: 25px; padding: 12px 24px; background-color: #2e4d2c; color: white; text-decoration: none; font-weight: bold; border-radius: 8px; transition: background-color 0.3s;">
+  <a href="TaylorL CV.pdf" download style="display: inline-block; margin-top: 25px; padding: 12px 24px; background-color: #2e4d2c; color: white; text-decoration: none; font-weight: bold; border-radius: 8px; transition: background-color 0.3s;">
     Download Resume
   </a>
     </div>
