--- a/Code.html
+++ b/Code.html
@@ -360,14 +360,14 @@
     <section class="projects" aria-label="Projects">
       <h2>Projects</h2>
       <div class="project-card">
-        <h3>AI Pool Simulation</h3>
-        <p>Physics-based simulation to predict cue ball trajectory using machine learning.</p>
-        <a href="https://github.com/yourusername/ai-pool" target="_blank" class="resume-button">View</a>
+        <h3>Pool Simulation and Prediction</h3>
+        <p>Utilising statistical analysis to predict the outcome of Ultimate Pool Events</p>
+        <a href="UP-Demo.html" target="_blank" class="resume-button">View</a>
       </div>
       <div class="project-card">
         <h3>Portfolio Website</h3>
         <p>This site! Built with HTML, CSS, and a focus on visuals and performance.</p>
-        <a href="https://github.com/yourusername/portfolio-site" target="_blank" class="resume-button">View</a>
+        <a href="Main.html" target="_blank" class="resume-button">View</a>
       </div>
     </section>
   </main>
