--- a/Me.html
+++ b/Me.html
@@ -294,7 +294,7 @@ a:hover {
   <section class="about-section">
     <h2>About Me</h2>
     <p>
-    Hi! Im Taylor, I grew up in the industrial town of Bradford. I spent my younger years dreaming of being a scientist until I began coding at 11 with Python which sent me on the path to being a computer scientist! 
+    Hi! Im Taylor, I grew up in the industrial town of Bradford. I spent my younger years dreaming of being a scientist until I began coding at 11 with Python which sent me on the path to becoming a computer scientist! 
     </p>
 
     <p>I was educated at Immanuel College, chasing the hard sciences of Mathematics and Physics with a mind-opening blend of Philosophy of which I achieved the highest possible grade in. </p>
